--- a/index.html
+++ b/index.html
@@ -1,27 +1,21 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <title>Sex</title>
-  
-  
-  
-      <link rel="stylesheet" href="css/style.css">
-
-  
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-
   <div class="vagina"></div>
-  <div class="penis"></div>
-  <div class="balls">
-    <div class="egg"></div><div class="egg"></div>
+  <div id="Dick">
+    <div class="penis"></div>
+    <div class="balls">
+      <div class="egg"></div><div class="egg"></div>
+    </div>
   </div>
-  
-  
-
+  <script src="js/index.js"></script>
 </body>
 
 </html>
